Fixing overlap issue of index.html (footer and review-box get overlapped)

--- a/styles/main.css
+++ b/styles/main.css
@@ -547,6 +547,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   border-top-left-radius: 120px;
   font-size: 13px;
   line-height: 12px;
+  clear: both;
 }
 .footer-row {
   width: 95%; /* gap between each row including 3 rows*/
